--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-movies-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/lenariem/movies-list-app-hooks_classic-React",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
